:bug: Fix checkboxes fieldtype label and alignment

--- a/resources/sass/components/fieldtypes/checkboxes.scss
+++ b/resources/sass/components/fieldtypes/checkboxes.scss
@@ -7,7 +7,7 @@
         @apply flex items-center mb-1;
     }
 
-    label {
+    .option + label {
         @apply ml-1;
     }
 }
